--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -36,8 +36,15 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNc-c1-bZz">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem systemItem="camera" id="Jvr-bq-g7Z"/>
-                                    <barButtonItem title="Item" id="Prf-s3-sLo"/>
+                                    <barButtonItem systemItem="flexibleSpace" id="Prf-s3-sLo"/>
+                                    <barButtonItem systemItem="camera" id="Jvr-bq-g7Z">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="vXZ-lx-hvc" id="9Ol-Bs-g4C"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="12" systemItem="fixedSpace" id="ftX-4g-dEV"/>
+                                    <barButtonItem title="Album" id="7QC-u3-Yxv"/>
+                                    <barButtonItem systemItem="flexibleSpace" id="gBT-7j-Gjs"/>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -59,7 +66,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="albumButton" destination="7QC-u3-Yxv" id="hY7-82-6Nh"/>
                         <outlet property="bottomText" destination="hCo-Bx-c2D" id="8jl-c5-x6k"/>
+                        <outlet property="cameraButton" destination="Jvr-bq-g7Z" id="Kod-01-603"/>
+                        <outlet property="imagePickerView" destination="3gZ-gu-oR8" id="k13-Ps-FAs"/>
                         <outlet property="topText" destination="hXw-gy-clD" id="um7-xD-CLy"/>
                     </connections>
                 </viewController>
