--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eEe-Xp-oOt">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -94,6 +94,90 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="974" y="934"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="imw-zu-ih6">
+            <objects>
+                <tabBarController id="eEe-Xp-oOt" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="PEf-9H-OiW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="kTI-md-d1f" kind="relationship" relationship="viewControllers" id="c7U-li-Lyf"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lhl-bA-2Bu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-747" y="107"/>
+        </scene>
+        <!--Meme Table View Controller-->
+        <scene sceneID="eoL-fV-uxf">
+            <objects>
+                <viewController title="Meme Table View Controller" id="kTI-md-d1f" customClass="MemeTableViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YeZ-D9-jKT"/>
+                        <viewControllerLayoutGuide type="bottom" id="8lR-NS-ven"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nsw-zi-548">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EvH-dJ-dsZ">
+                                <rect key="frame" x="0.0" y="75" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MemeCell" id="GqO-J5-DZH">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GqO-J5-DZH" id="TsF-ZU-z4d">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="kTI-md-d1f" id="LnH-GP-3dU"/>
+                                </connections>
+                            </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mzr-1F-yxw">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ray-sI-W7B"/>
+                                    <barButtonItem title="Sent Memes" id="Aoy-OD-DiQ">
+                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qsH-m0-fpB"/>
+                                    <barButtonItem systemItem="add" id="520-yh-rYf">
+                                        <connections>
+                                            <segue destination="vXZ-lx-hvc" kind="presentation" id="uqU-th-lsk"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Mzr-1F-yxw" firstAttribute="leading" secondItem="nsw-zi-548" secondAttribute="leadingMargin" constant="-16" id="1YF-k4-Y1D"/>
+                            <constraint firstItem="EvH-dJ-dsZ" firstAttribute="top" secondItem="Mzr-1F-yxw" secondAttribute="bottom" constant="11" id="1n6-HJ-tzF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mzr-1F-yxw" secondAttribute="trailing" constant="-16" id="N8N-9J-q8n"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EvH-dJ-dsZ" secondAttribute="trailing" constant="-16" id="UzW-Z1-aoa"/>
+                            <constraint firstItem="Mzr-1F-yxw" firstAttribute="top" secondItem="YeZ-D9-jKT" secondAttribute="bottom" id="glG-uK-BgB"/>
+                            <constraint firstItem="EvH-dJ-dsZ" firstAttribute="leading" secondItem="nsw-zi-548" secondAttribute="leadingMargin" constant="-16" id="nXs-yJ-bYA"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="Table" id="QZM-jo-KJP"/>
+                    <connections>
+                        <outlet property="tableView" destination="EvH-dJ-dsZ" id="A2T-mt-9O4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xz9-ut-CPP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="462" y="96"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Table" width="30" height="30"/>
+    </resources>
 </document>
