--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eEe-Xp-oOt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eEe-Xp-oOt">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Meme Detail View Controller-->
         <scene sceneID="Wz5-zx-iko">
             <objects>
-                <viewController id="SeH-uT-PN2" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeDetailViewController" id="SeH-uT-PN2" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bda-8G-i4y"/>
                         <viewControllerLayoutGuide type="bottom" id="Ama-NQ-GCW"/>
@@ -139,8 +139,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="kTI-md-d1f" kind="relationship" relationship="viewControllers" id="c7U-li-Lyf"/>
-                        <segue destination="tAJ-oh-riv" kind="relationship" relationship="viewControllers" id="U9v-lw-jbF"/>
+                        <segue destination="rps-G8-rKf" kind="relationship" relationship="viewControllers" id="lz2-It-i4D"/>
+                        <segue destination="fCQ-yv-ncK" kind="relationship" relationship="viewControllers" id="C60-Ih-TdB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lhl-bA-2Bu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -159,7 +159,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nZA-UM-ttp">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nZA-UM-ttp">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hrg-T6-5YB">
                                     <size key="itemSize" width="50" height="50"/>
@@ -186,15 +186,56 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nZA-UM-ttp" firstAttribute="leading" secondItem="dVf-ZE-yIF" secondAttribute="leadingMargin" constant="-16" id="P3I-vF-ant"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nZA-UM-ttp" secondAttribute="trailing" constant="-16" id="Tzf-4u-eZ7"/>
+                            <constraint firstItem="nZA-UM-ttp" firstAttribute="bottom" secondItem="dVf-ZE-yIF" secondAttribute="bottomMargin" id="pWi-kL-lJV"/>
+                            <constraint firstItem="nZA-UM-ttp" firstAttribute="top" secondItem="dVf-ZE-yIF" secondAttribute="topMargin" id="zMO-y8-Q2y"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Grid" id="86N-ag-Mbw"/>
+                    <navigationItem key="navigationItem" id="fJI-dI-dWn"/>
                     <connections>
                         <outlet property="collectionView" destination="nZA-UM-ttp" id="MLy-PU-mrK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="enJ-gC-2Ov" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-404" y="960"/>
+            <point key="canvasLocation" x="71" y="827"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ldU-ZI-Dyq">
+            <objects>
+                <navigationController id="fCQ-yv-ncK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="Grid" id="veF-La-xoo"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ko5-ba-oYk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tAJ-oh-riv" kind="relationship" relationship="rootViewController" id="Znp-jn-nir"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="47G-rt-KQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-651" y="820"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gqt-gQ-ETG">
+            <objects>
+                <navigationController id="rps-G8-rKf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="Table" id="QRX-lg-5QP"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" restorationIdentifier="TableViewNavController" id="GkT-kZ-iHV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kTI-md-d1f" kind="relationship" relationship="rootViewController" id="hfr-9j-KtA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TKZ-NU-AVL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-103" y="-663"/>
         </scene>
         <!--Meme Table View Controller-->
         <scene sceneID="eoL-fV-uxf">
@@ -208,25 +249,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EvH-dJ-dsZ">
-                                <rect key="frame" x="0.0" y="75" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MemeCell" id="GqO-J5-DZH">
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GqO-J5-DZH" id="TsF-ZU-z4d">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="SeH-uT-PN2" kind="show" id="0rI-sQ-akm"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="kTI-md-d1f" id="LnH-GP-3dU"/>
-                                </connections>
-                            </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mzr-1F-yxw">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mzr-1F-yxw">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="ray-sI-W7B"/>
@@ -241,11 +264,26 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EvH-dJ-dsZ">
+                                <rect key="frame" x="0.0" y="20" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MemeCell" id="GqO-J5-DZH">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GqO-J5-DZH" id="TsF-ZU-z4d">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="kTI-md-d1f" id="LnH-GP-3dU"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Mzr-1F-yxw" firstAttribute="leading" secondItem="nsw-zi-548" secondAttribute="leadingMargin" constant="-16" id="1YF-k4-Y1D"/>
-                            <constraint firstItem="EvH-dJ-dsZ" firstAttribute="top" secondItem="Mzr-1F-yxw" secondAttribute="bottom" constant="11" id="1n6-HJ-tzF"/>
+                            <constraint firstItem="EvH-dJ-dsZ" firstAttribute="top" secondItem="Mzr-1F-yxw" secondAttribute="bottom" id="1n6-HJ-tzF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Mzr-1F-yxw" secondAttribute="trailing" constant="-16" id="N8N-9J-q8n"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EvH-dJ-dsZ" secondAttribute="trailing" constant="-16" id="UzW-Z1-aoa"/>
                             <constraint firstItem="Mzr-1F-yxw" firstAttribute="top" secondItem="YeZ-D9-jKT" secondAttribute="bottom" id="glG-uK-BgB"/>
@@ -253,6 +291,7 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Table" id="QZM-jo-KJP"/>
+                    <navigationItem key="navigationItem" id="LO5-wJ-oop"/>
                     <connections>
                         <outlet property="tableView" destination="EvH-dJ-dsZ" id="A2T-mt-9O4"/>
                     </connections>
