--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Ob-Bc-aSU">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ob-Bc-aSU">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="action" id="orC-gY-zxM">
@@ -74,7 +74,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem systemItem="flexibleSpace" id="Ara-6Q-IBb"/>
-                                    <barButtonItem title="Cancel" id="AwT-Wl-NeJ"/>
+                                    <barButtonItem title="Cancel" id="AwT-Wl-NeJ">
+                                        <connections>
+                                            <action selector="cancelEdit:" destination="vXZ-lx-hvc" id="hQr-OI-ha7"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNc-c1-bZz">
@@ -98,13 +102,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="7Ob-Bc-aSU" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="1Ad-P2-E8x"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="3gZ-gu-oR8" secondAttribute="bottom" id="1WR-w6-hXG"/>
                             <constraint firstItem="hCo-Bx-c2D" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="7ds-Pe-5fh"/>
                             <constraint firstItem="DNc-c1-bZz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="ENx-ul-QPO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3gZ-gu-oR8" secondAttribute="trailing" constant="-16" id="PeX-Lj-cdM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7Ob-Bc-aSU" secondAttribute="trailing" constant="-16" id="Uqf-OR-V8v"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DNc-c1-bZz" secondAttribute="trailing" constant="-16" id="VjB-6x-m2I"/>
                             <constraint firstItem="hXw-gy-clD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="c0T-em-dXG"/>
                             <constraint firstItem="hCo-Bx-c2D" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="dp3-hf-B1x"/>
+                            <constraint firstItem="7Ob-Bc-aSU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="enq-Yy-fS4"/>
                             <constraint firstItem="DNc-c1-bZz" firstAttribute="top" secondItem="hCo-Bx-c2D" secondAttribute="bottom" constant="25" id="f6R-mn-tD4"/>
                             <constraint firstItem="3gZ-gu-oR8" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="hCy-1V-0iq"/>
                             <constraint firstItem="hXw-gy-clD" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="l7d-Fy-aJZ"/>
